@@ -6,6 +6,8 @@ $Id$
 
 Changes in version 1.3.2:
 
+* Implemented SII writing workaround for some slaves, that don't respond
+  correctly.
 * Read dynamic PDO mapping from SDO dictionary.
 * Improved handling for spontaneous AL state changes.
 * Master takes mailbox sync manager configurations from EEPROM words
